# ConerstoneMemory

./: .env.example  .gitignore  AGENTS.md  Dockerfile.api  README.md  alembic.ini  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 20260409_0001_initial_v1_schema.py  20260411_0002_hybrid_rule_llm_ingest.py  20260415_0003_provider_gate_and_embedding_indexes.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/web/: Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/worker/: __init__.py  main.py
docs/decisions/: 0001-repo-shape-and-postgres-job-ledger.md  0002-runtime-precedence-binding-signal-observations-and-sensitive-payload-protection.md  0003-normalized-event-envelopes-and-hybrid-rule-llm-policy.md  0004-provider-gated-inference-and-per-model-embedding-indexes.md  0005-api-ontology-package-workflows-and-active-intent-memory.md  0006-control-plane-ui-foundation-primer-shadcn-tailwind.md
docs/specs/: control-plane-ui-redesign-plan.md  spec_1.0.md
scripts/: bootstrap_db.py  export_openapi.py  verify_compose_readonly.py  verify_ollama_readonly.py
src/memory_engine/: __init__.py  id_utils.py
src/memoryengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py
tests/integration/: test_api_workflow_intent_memory.py  test_control_lifecycle.py  test_synthetic_decision_matrix.py  test_synthetic_memory_flow.py
tests/support/: __init__.py  builders.py  ollama.py
tests/unit/: test_auth_login.py  test_control_validation.py  (+3 more)
(+64 files in other folders)
