[project]
name = "memoryengine"
version = "0.1.0"
description = "Human-configurable API-driven memory platform v1"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.16.5,<2.0.0",
  "cryptography>=45.0.0,<46.0.0",
  "email-validator>=2.3.0,<3.0.0",
  "fastapi>=0.135.3,<0.136.0",
  "httpx>=0.28.1,<0.29.0",
  "pgvector>=0.4.1,<0.5.0",
  "psycopg[binary]>=3.2.12,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<0.0.21",
  "pyyaml>=6.0.3,<7.0.0",
  "sqlalchemy>=2.0.43,<3.0.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-asyncio>=1.2.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
